get crop by location
