# src/main/java/be/howest/ti/mars/webserver/WebServer.java
@@ -175,6 +175,7 @@ public class WebServer extends AbstractVerticle {
         addRouteWithCtxFunction(factory, "removeProduct", bridge::removeProduct);
         addRouteWithCtxFunction(factory, "getLocations", bridge::getCropTypes);
         addRouteWithCtxFunction(factory, "getCropsWhereNameIsLike", bridge::getCropsWhereNameIsLike);
+        addRouteWithCtxFunction(factory, "getCropByLocation", bridge::getCropByLocation);
     }
 
     private void addRouteWithCtxFunction(OpenAPI3RouterFactory factory, String operationId,
