# src/main/resources/openapi-group-14.yaml
@@ -174,7 +174,7 @@ paths:
         '500':
           description: Internal Server Error
 
-  /api/getSeeds/{name}:
+  /api/getCrop/{name}:
     get:
       summary: Get all Seeds by part of name
       operationId: getCropsWhereNameIsLike
@@ -183,7 +183,7 @@ paths:
           in: "path"
           required: true
           schema:
-            type: name
+            type: string
       responses:
         '200':
           description: OK
@@ -408,10 +408,10 @@ paths:
         '500':
           description: Internal Server Error
 
-  /api/getLocations/{longitude}/{latitude}:
+  /api/getCrop/{longitude}/{latitude}:
     get:
       summary: Get all crop for specific location
-      operationId: getLocationByLocation
+      operationId: getCropByLocation
       parameters:
         - name: "longitude"
           in: "path"
